namespace POC.Contracts.Screen;

public class PairScreenDto
{
    public string PairingCode { get; set; }
    public int ScreenProfileId { get; set; }
}