@startuml
class PairScreenCommand {
    + PairScreenDto : PairScreenDto <<get>> <<set>>
}
"IRequest`1" "<ScreenDto>" <|-- PairScreenCommand
PairScreenCommand ..> PairScreenDto: <<use>>
class PairScreenDto {
    + PairingCode : string <<get>> <<set>>
    + ScreenProfileId : int <<get>> <<set>>
}
@enduml